# tennis-match-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: tennis_elo_xgboost_model_v4.ipynb
scripts/: predict.py  train.py
src/tennis_predictor/: __init__.py  clv.py  config.py  data.py  elo.py  features.py  model.py  pipeline.py  predict.py
tests/: test_devig.py
