[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-match-predictor"
version = "1.0.0"
description = "Surface-adjusted Elo + XGBoost tennis match-outcome model, benchmarked against the sharp closing line."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sam Coenen" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
tennis-train = "scripts.train:main"
tennis-predict = "scripts.predict:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
